Fixed codemirror resize, fixed tool overlap on edit message input when codemirror is enabled

--- a/src/styles/_ui-components.scss
+++ b/src/styles/_ui-components.scss
@@ -247,6 +247,25 @@
     &:hover {
       opacity: 1;
     }
+
+    &.active {
+      opacity: 1;
+      color: var(--theme-quote-color);
+    }
+
+    &.danger {
+      color: var(--color-warning);
+      &:hover {
+        color: var(--color-accent-red);
+      }
+    }
+
+    &.confirm {
+      color: var(--color-accent-green);
+      &:hover {
+        filter: brightness(120%);
+      }
+    }
   }
 
   .textarea-header {
